# mockoto

./: .gitattributes  .gitignore  .versionize.sh  ActionFactory.hpp  Bindgen.hpp  CMakeLists.txt  ChibiGen.hpp  Chibigen.hpp  ChickenGen.hpp  Config.hpp  Dockerfile  LICENSE  MockGen.hpp  Mockgen.hpp  Mockoto.cpp  README.md  RacketGen.hpp  TEST-API-CONTRACT.md  binders.chibi.scm  binders.chicken.scm  binders.rkt  mockoto.1  mockoto.1.in  version.h.in
.github/workflows/: ci.yml
example/: Makefile  README.md  chibi_test.sh  client.c  client.h  example_test.c  example_test.rkt  server.h  server_mock.c  server_mock.h
examples/: Makefile  README.md
examples/pure-c-runtime-hooks/: .gitignore  Makefile  README.md  runtime.h  sut.c  sut.h  test.c
examples/pure-c-runtime-hooks/pure_c_test.dSYM/Contents/: Info.plist
examples/pure-c-runtime-hooks/pure_c_test.dSYM/Contents/Resources/Relocations/x86_64/: pure_c_test.yml
examples/racket-dual-bindings/: .gitignore  Makefile  README.md  engine.h  pipeline.c  test.chibi.scm  test.chicken.scm  test.rkt  trace.h
examples/racket-dual-bindings/libpipeline_component.dylib.dSYM/Contents/: Info.plist
examples/racket-dual-bindings/libpipeline_component.dylib.dSYM/Contents/Resources/Relocations/x86_64/: libpipeline_component.dylib.yml
examples/racket-engine-basic/: .gitignore  Makefile  README.md  engine.c  engine.h  test.chibi.scm  test.chicken.scm  test.rkt
examples/racket-engine-basic/libengine_component.dylib.dSYM/Contents/: Info.plist
examples/racket-engine-basic/libengine_component.dylib.dSYM/Contents/Resources/Relocations/x86_64/: libengine_component.dylib.yml
examples/racket-stateful-a-mock-b/: .gitignore  Makefile  README.md  a.c  a.h  b.h  test.chibi.scm  test.chicken.scm  test.rkt
examples/tidset-copied/: .gitignore  Makefile  README.md
examples/tidset-copied/include/lotto/base/: marshable.h  task_id.h  tidmap.h  tidset.h  tidset_bindings.h  tidset_test_api.h
examples/tidset-copied/include/lotto/sys/: abort.h  assert.h  ensure.h  logger.h  memmgr_runtime.h  stdlib.h  string.h
examples/tidset-copied/include/lotto/util/: cdefs.h  macros.h
examples/tidset-copied/src/base/: tidmap_stub.c  tidset.c  tidset_test_api.c
examples/tidset-copied/src/sys/: compat.c  memmgr_runtime_real.c
examples/tidset-copied/test/: tidset_test.c  tidset_test.chibi.scm  tidset_test.chicken.scm  tidset_test.rkt  tidset_test.shared.scm
tests/: run_case.sh
tests/fixtures/: basic.h  chibi_bytes.h  chicken_struct.h  extra.h
